fix: Fix Cancel Sending Kudos Achievement status - MEED-2027 - Meeds-io/meeds#921 (#303) (#304)
Prior to this change, the `receiveKudos` gamification achievement is considered as 'rejected due to activity deletion' instead of 'canceled' when canceling the kudos by the author. This change will avoid deleting the activity before switching gamification events to canceled to not switch it as 'rejected'.